--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-ui": "^2.15.1",
     "less-loader": "^8.0.0",
     "vue": "^2.6.11",
+    "vue-amap": "^0.5.10",
     "vue-axios": "^3.2.4",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
